[package]
name = "polyhunt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
dashmap = { version = "5.5.3" }
h3o = "0.5.1"
indicatif = {version = "0.17.7", features = ["rayon"]}
rand = "0.8.5"
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
